--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,12 @@
-python -m pip install --upgrade pip
-python -m pip install numpy==1.18.0
-python -m pip install pandas==0.25.3
-python -m pip install keras==2.6.0
-python -m pip install opencv-python==3.4.1.15
-python -m pip install tensorflow==2.6.2
-python -m pip install imutils==0.5.3
-python -m pip install opencv-contrib-python==3.4.1.15
-python -m pip install scikit-learn==0.19.0
-python -m pip install matplotlib
-python -m pip install seaborn
-python -m pip install pillow==6.2.1
-python -m pip install jupyter notebook
-
-
-
-
-
-
-import numpy as np
-import seaborn as sns
-import matplotlib as plt
-
-
-
-
-
-
-python -m pip install --upgrade pip
-python -m pip install numpy
-python -m pip install pandas
-python -m pip install keras
-python -m pip install opencv-python
-python -m pip install tensorflow
-python -m pip install imutils
-python -m pip install opencv-contrib-python
-python -m pip install scikit-learn
-python -m pip install matplotlib
-python -m pip install seaborn
-python -m pip install pillow
-python -m pip install jupyter notebook
+numpy==1.18.0
+pandas==0.25.3
+keras==2.6.0
+opencv-python==3.4.1.15
+tensorflow==2.6.2
+imutils==0.5.3
+opencv-contrib-python==3.4.1.15
+scikit-learn==0.19.0
+matplotlib
+seaborn
+pillow==6.2.1
+jupyter
