--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
 numpy>=1.21.0
 pandas==0.25.3
 keras==2.6.0
-opencv-python==3.4.1.15
 tensorflow==2.6.2
 imutils==0.5.3
-opencv-contrib-python==3.4.1.15
-scikit-learn==0.19.0
+opencv-python>=4.0.0
+scikit-learn>=0.24.0
 matplotlib
 seaborn
 pillow==6.2.1
