--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-numpy>=1.21.0
-pandas==0.25.3
-keras==2.6.0
-tensorflow==2.6.2
-imutils==0.5.3
-opencv-python>=4.0.0
-scikit-learn>=0.24.0
-matplotlib
-seaborn
-pillow==6.2.1
-jupyter
+numpy>=1.25.0
+pandas>=2.0.0
+keras>=2.13.0
+tensorflow>=2.13.0
+imutils>=0.5.4
+opencv-python>=4.5.0
+scikit-learn>=1.0.0
+matplotlib>=3.6.0
+seaborn>=0.12.0
+pillow>=10.0.0
+jupyter>=1.0.0
